# hasitrp

./: Interpreter.hs  README.md  hasitrp.cabal  parse.hs
src/: Main.hs
src/Lib/: AST.hs  Evaluator.hs  Lexer.hs  Parser.hs  Tokens.hs
